--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "source"]
 	path = source
-	url = https://oauth2:${GITHUB_TOKEN}@github.com/Youyu-dev/blog-source.git
+	url = https://$GITHUB_TOKEN@github.com/Youyu-dev/blog-source.git
