--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "source"]
 	path = source
-	url = git@github.com:Youyu-dev/blog-source.git
+	url = https://${process.env.GITHUB_TOKEN}@github.com/Youyu-dev/blog-source.git
