--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: http://example.com 
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -29,6 +29,13 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - "package.json"
+  - "package-lock.json"
+  - "node_modules/**"
+  - "source/**"
+  - "themes/**"
+  - ".github/**"
+  - ".git/**"
 
 # Writing
 new_post_name: :title.md # File name of new posts
