--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: <YouyuSpace/>
+title: YouyuSpace
+titlePre: <
+titleSuf: />
 subtitle: ''
 description: ''
 keywords:
