更新source索引: 更换文章封面

--- a/themes/anzhiyu/_config.yml
+++ b/themes/anzhiyu/_config.yml
@@ -248,7 +248,7 @@ toc:
   page: false
   number: true
   expand: false
-  style_simple: false # for post
+  style_simple: true # for post
 
 post_copyright:
   enable: true
